--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Pratilipi | Read Stories, Poems and Books</title>
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href="//unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
   </head>
