--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Pratilipi | Read Stories, Poems and Books</title>
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+    <link rel="manifest" href="/manifest.json" />
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      var OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "61b5938c-31b2-48bd-8a54-4e5d10ad9129",
+        });
+      });
+    </script>
   </head>
   <body>
     <div id="app"></div>
