--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pratilipi | Read Stories, Poems and Books</title>
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json"  crossorigin="use-credentials"/>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script>
       var OneSignal = window.OneSignal || [];
