--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       var OneSignal = window.OneSignal || [];
       OneSignal.push(function() {
         OneSignal.init({
-          appId: "61b5938c-31b2-48bd-8a54-4e5d10ad9129",
+          appId: '<%= htmlWebpackPlugin.options.one_signal_app_id %>',
           path: '/static/'
         });
       });
