--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="google" content="notranslate" />
     <title>Pratilipi | Read Stories, Poems and Books</title>
+    <meta name="description" content="A platform to discover, read and share your favorite stories, poems and books in a language, device and format of your choice.">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
