--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="A platform to discover, read and share your favorite stories, poems and books in a language, device and format of your choice.">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <script type="text/javascript" src="https://0.ptlp.co/third-party/tinymce-4.5.1/tinymce.min.js"></script>
+    <link rel="preload" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" as="style">
     <link href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
   <body>
