[ADD] Added link to manifest file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pratilipi | Read Stories, Poems and Books</title>
     <meta name="description" content="A platform to discover, read and share your favorite stories, poems and books in a language, device and format of your choice.">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+    <link rel="manifest" href="/static/manifest.json" crossorigin="use-credentials"/>
     <link rel="preload" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" as="style">
     <link href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
