Updating address bar color

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="google" content="notranslate" />
     <title>Pratilipi | Read Stories, Poems and Books</title>
     <meta name="description" content="A platform to discover, read and share your favorite stories, poems and books in a language, device and format of your choice.">
+    <meta name="theme-color" content="#d00b12"/>
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link rel="manifest" href="/static/manifest.json" crossorigin="use-credentials"/>
     <link rel="preload" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" as="style">
