[ADD] Added meta tag to prevent caching of index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="<%= htmlWebpackPlugin.options.language %>">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="expires" content="0" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="google" content="notranslate" />
     <title>Pratilipi | Read Stories, Poems and Books</title>
